--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 # Bioubrain
 
-A student-led initiative looking to foster the knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. 
+A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. 
 
 
 ## About
