--- a/index.html
+++ b/index.html
@@ -1,47 +1,76 @@
+
+<h1>Bioubrain</h1>
+
+<p>A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. </p>
+
+<h2>About</h2>
+
+<p>Biou (Greek); duration of life, the medium by which life is sustained. 
+</p>
+
+<p>BiouBrain started out as an initiative to help youth around the world gain access to neuroscience resources, and was originally intended to be shared with a goal of increasing youth opportunities in neuroscience in mind. 
+  This led to an initiative under BiouBrain to further progress in production of early-stage resources and help make learning about Neuroscience more accessible. 
+</p>
+
+<h2>Team Member Bio's
+</h2>
+
+<h3>Danielle Choi:
+</h3>
+
+<p>"Hello! My name is Danielle Choi, and I am currently a sophomore at Glenelg Country School. 
+  Coming from a military family with a blend of Japanese and Korean heritage has exposed me to a wide variety of perspectives that constantly influence the way I view the world. 
+  As a result, I love to analyze the interplay between our thoughts and cultures through different aspects: the intricate mechanisms of neuroscience and the creative expression of literature. 
+  If I do not have my face buried in a book, you can find me playing the flute or painting with Bob Ross tutorials." 
+</p>
+
+<h3>Jolin Cheng:
+</h3>
+
+<p>"Hi! I’m Jolin, and I’m currently a junior in North Carolina. 
+  I’m super passionate about the sciences and am so excited about BiouBrain (you totally should too! ;))!"
+</p>
+
+<h3>Gurleen Hans: 
+</h3> 
+
+<p>"Hi, my name is Gurleen Hans! 
+  As a high schooler, I often struggled to find neuroscience-related initiatives or extracurriculars in my hometown. 
+  As a result, I looked for as many online opportunities as possible and got started. 
+  Some of my first neuroscience-related extracurriculars included the NeuroSci101 Lecture Series and Toronto Brain Bee by the UofT CPIN. 
+  I also did some extracurriculars with the IYNA, including writing a featured article on general information about dendritic spines and later went on to do the IYNA summer program. 
+  In Neuroscience I of the summer program was where I first met the co-founders of BiouBrain and the initiative started up! I am currently in my first year studying Life Sciences at the University of Toronto. 
+  To be honest, I'm guilty of not having very many hobbies! I enjoy lifting weights and spending time in nature, and I'm a bit of a plant mom. 
+  I like math and anything related to it and know a bit of computer science from my high school classes. 
+  I am a total beginner in Simulation Neuroscience topics and want to learn more! 
+  I love the Dune movies and rewatch them constantly, and right now I am reading a bit of the first Dune book!"
+</p>
+
 ---
 
-# Bioubrain
-
-A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. 
-
-
-## About
-
-Biou (Greek); duration of life, the medium by which life is sustained. 
-
-BiouBrain started out as an initiative to help youth around the world gain access to neuroscience resources, and was originally intended to be shared with a goal of increasing youth opportunities in neuroscience in mind. This led to an initiative under BiouBrain to further progress in production of early-stage resources and help make learning about Neuroscience more accessible. 
-
-## Team Member Bio's
-
-### Danielle Choi:
-
-"Hello! My name is Danielle Choi, and I am currently a sophomore at Glenelg Country School. Coming from a military family with a blend of Japanese and Korean heritage has exposed me to a wide variety of perspectives that constantly influence the way I view the world. As a result, I love to analyze the interplay between our thoughts and cultures through different aspects: the intricate mechanisms of neuroscience and the creative expression of literature. If I do not have my face buried in a book, you can find me playing the flute or painting with Bob Ross tutorials."
-
-### Jolin Cheng:
-
-"Hi! I’m Jolin, and I’m currently a junior in North Carolina. I’m super passionate about the sciences and am so excited about BiouBrain (you totally should too! ;))!"
-
-### Gurleen Hans:  
-
-"Hi, my name is Gurleen Hans! As a high schooler, I often struggled to find neuroscience-related initiatives or extracurriculars in my hometown. As a result, I looked for as many online opportunities as possible and got started. Some of my first neuroscience-related extracurriculars included the NeuroSci101 Lecture Series and Toronto Brain Bee by the UofT CPIN. I also did some extracurriculars with the IYNA, including writing a featured article on general information about dendritic spines and later went on to do the IYNA summer program. In Neuroscience I of the summer program was where I first met the co-founders of BiouBrain and the initiative started up! I am currently in my first year studying Life Sciences at the University of Toronto. To be honest, I'm guilty of not having very many hobbies! I enjoy lifting weights and spending time in nature, and I'm a bit of a plant mom. I like math and anything related to it and know a bit of computer science from my high school classes. I am a total beginner in Simulation Neuroscience topics and want to learn more! I love the Dune movies and rewatch them constantly, and right now I am reading a bit of the first Dune book!"
-
----
-
-## Current Projects
+<h2>Current Projects
+</h2>
 
 - NeuronicBookNook Journal Club
 - In Progress: Notes on the Current [Brain Facts](https://www.brainfacts.org/the-brain-facts-book) Book
 
-## Get Involved! 
+<h2>Get Involved! 
+</h2>
+
 - [Journal Club Presenter Application](https://forms.gle/5z4V2hfoBEffj3vS9)
 - [General Member Application](https://forms.gle/QiAUE6XMU2DPETMK7)
 
 ---
-## Links
-- [Discord Invite](https://discord.gg/Uh8xzRGPBE)
-- [Youtube](https://www.youtube.com/@bioubrain)
 
-## Socials
-- [Twitter](https://x.com/bioubrain)
-- [Instagram](https://www.instagram.com/bioubrain/)
-- [Tiktok](https://www.tiktok.com/@bioubrain)
+<h2>Links
+</h2>
+
+<a href="https://discord.gg/Uh8xzRGPBE">Discord Invite</a>
+<a href="https://www.youtube.com/@bioubrain">Youtube</a>
+
+<h2>Socials
+</h2>
+
+<a href="https://x.com/bioubrain">X/Twitter</a>
+<a href="https://www.instagram.com/bioubrain/">Instagram</a>
+<a href="https://www.tiktok.com/@bioubrain">Tiktok</a>
