--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
 <h2>Get Involved! 
 </h2>
 
-- [Journal Club Presenter Application](https://forms.gle/5z4V2hfoBEffj3vS9)
-- [General Member Application](https://forms.gle/QiAUE6XMU2DPETMK7)
+<p><a href="https://forms.gle/5z4V2hfoBEffj3vS9">Journal Club Presenter Application</a></p>
+<p><a href="https://forms.gle/QiAUE6XMU2DPETMK7">General Member Application</a></p>
 
 ---
 
 <h2>Links
 </h2>
 
-<a href="https://discord.gg/Uh8xzRGPBE">Discord Invite</a>
-<a href="https://www.youtube.com/@bioubrain">Youtube</a>
+<a href="https://discord.gg/Uh8xzRGPBE">Discord Invite  </a>
+<a href="https://www.youtube.com/@bioubrain">Youtube  </a>
 
 <h2>Socials
 </h2>
 
-<a href="https://x.com/bioubrain">X/Twitter</a>
-<a href="https://www.instagram.com/bioubrain/">Instagram</a>
-<a href="https://www.tiktok.com/@bioubrain">Tiktok</a>
+<a href="https://x.com/bioubrain">X/Twitter  </a>
+<a href="https://www.instagram.com/bioubrain/">Instagram  </a>
+<a href="https://www.tiktok.com/@bioubrain">Tiktok  </a>
