--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 <h2>Current Projects
 </h2>
 
-- NeuronicBookNook Journal Club
-- In Progress: Notes on the Current [Brain Facts](https://www.brainfacts.org/the-brain-facts-book) Book
+<p>NeuronicBookNook Journal Club</p>
+<p>In Progress: Notes on the Current <a href="https://www.brainfacts.org/the-brain-facts-book">Brain Facts Book</a>. </p>
 
 <h2>Get Involved! 
 </h2>
