--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
-<h1> </h1>
-<h1>Bioubrain</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: "Times New Roman", Times, serif;
+}
 
-<p>A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. </p>
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About Us</a>
+  <a href="#getin">Get Involved</a>
+  <a href="#content1">BB Notes</a>
+</div>
+
+<div style="padding-left:16px">
+  <h1>BiouBrain</h1>
+  <p>A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. </p>
+
+</div>
 
 <h2>About</h2>
 
@@ -74,3 +119,6 @@
 <p><a href="https://x.com/bioubrain">X/Twitter</a></p>
 <p><a href="https://www.instagram.com/bioubrain/">Instagram</a></p>
 <p><a href="https://www.tiktok.com/@bioubrain">Tiktok</a></p>
+
+</body>
+</html>
