--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ body {
 
 <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#about">About Us</a>
-  <a href="#getin">Get Involved</a>
-  <a href="#content1">BB Notes</a>
+  <a href="about.html">About Us</a>
+  <a href="getin.html">Get Involved</a>
+  <a href="content1.html">BB Notes</a>
 </div>
 
 <div style="padding-left:16px">
