--- a/about.html
+++ b/about.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
-  
+  <div style="padding-left:16px">
+    <h2>About</h2>
+
+<p>Biou (Greek); duration of life, the medium by which life is sustained. 
+</p>
+
+<p>BiouBrain started out as an initiative to help youth around the world gain access to neuroscience resources, and was originally intended to be shared with a goal of increasing youth opportunities in neuroscience in mind. 
+  This led to an initiative under BiouBrain to further progress in production of early-stage resources and help make learning about Neuroscience more accessible. 
+</p>
+
+  </div>
 </html>
