--- a/about.html
+++ b/about.html
@@ -1,7 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <div style="padding-left:16px">
-    <h2>About</h2>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="about.html">About Us</a>
+  <a href="getin.html">Get Involved</a>
+  <a href="content1.html">BB Notes</a>
+</div>
+
+<div style="padding-left:16px">
+
+  <h2>About</h2>
 
 <p>Biou (Greek); duration of life, the medium by which life is sustained. 
 </p>
@@ -10,5 +53,19 @@
   This led to an initiative under BiouBrain to further progress in production of early-stage resources and help make learning about Neuroscience more accessible. 
 </p>
 
-  </div>
+
+
+---
+
+<h2>Current Projects
+</h2>
+
+  <p>NeuronicBookNook Journal Club</p>
+<p>In Progress: Notes on the Current <a href="https://www.brainfacts.org/the-brain-facts-book">Brain Facts Book</a>. </p>
+
+
+---
+
+</div>
+</body>
 </html>
