--- a/getin.html
+++ b/getin.html
@@ -43,5 +43,34 @@ body {
 </div>
 
 <div style="padding-left:16px">
+
+<h2>Current Projects
+</h2>
+
+<p>NeuronicBookNook Journal Club</p>
+<p>In Progress: Notes on the Current <a href="https://www.brainfacts.org/the-brain-facts-book">Brain Facts Book</a>. </p>
+
+<h2>Get Involved! 
+</h2>
+
+<p><a href="https://forms.gle/5z4V2hfoBEffj3vS9">Journal Club Presenter Application</a></p>
+<p><a href="https://forms.gle/QiAUE6XMU2DPETMK7">General Member Application</a></p>
+
+<h2>Links
+</h2>
+
+<p><a href="https://discord.gg/Uh8xzRGPBE">Discord Invite</a></p>
+<p><a href="https://www.youtube.com/@bioubrain">Youtube</a></p>
+
+<h2>Socials
+</h2>
+
+<p><a href="https://x.com/bioubrain">X/Twitter</a></p>
+<p><a href="https://www.instagram.com/bioubrain/">Instagram</a></p>
+<p><a href="https://www.tiktok.com/@bioubrain">Tiktok</a></p>
+
+---
   
+</div>
+</body>
 </html>
