--- a/content1.html
+++ b/content1.html
@@ -43,6 +43,11 @@ body {
 </div>
 
 <div style="padding-left:16px">
+
+  <h2>Notes on the Brain Facts Book</h2>
+  <p>This page is curently under construction! We hope to get back to you soon! <3 </p>
+
+  ---
   
 </div>
 </body>
