--- a/about.html
+++ b/about.html
@@ -65,6 +65,9 @@ body {
 <h3>Danielle Choi:
 </h3>
 
+<img src="danielleprofile.png" alt="Danielle Choi" />
+
+  
 <p>"Hello! My name is Danielle Choi, and I am currently a sophomore at Glenelg Country School. 
   Coming from a military family with a blend of Japanese and Korean heritage has exposed me to a wide variety of perspectives that constantly influence the way I view the world. 
   As a result, I love to analyze the interplay between our thoughts and cultures through different aspects: the intricate mechanisms of neuroscience and the creative expression of literature. 
@@ -74,6 +77,9 @@ body {
 <h3>Jolin Cheng:
 </h3>
 
+<img src="jolinprofile.png" alt="Jolin Cheng" />
+
+  
 <p>"Hi! I’m Jolin, and I’m currently a junior in North Carolina. 
   I’m super passionate about the sciences and am so excited about BiouBrain (you totally should too! ;))!"
 </p>
@@ -81,6 +87,8 @@ body {
 <h3>Gurleen Hans: 
 </h3> 
 
+<img src="gurleenprofile.png" alt="Gurleen Hans" />
+  
 <p>"Hi, my name is Gurleen Hans! 
   As a high schooler, I often struggled to find neuroscience-related initiatives or extracurriculars in my hometown. 
   As a result, I looked for as many online opportunities as possible and got started. 
