--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@ body {
 </div>
 
 <div style="padding-left:16px">
+
+<img src="logoA.png" alt="BiouBrain Logo" />
+
+  
   <h1>BiouBrain</h1>
   <p>A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. </p>
 
