--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ body {
 
 <div style="padding-left:16px">
 
-<img src="logoA.png" alt="BiouBrain Logo" />
-
+  <img src="logoA.png" 
+     width="100" 
+     height="100" />
   
   <h1>BiouBrain</h1>
   <p>A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. </p>
