--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ body {
   <img src="logoA.png" 
      width="100" 
      height="100" />
+
+  <img src="logoB.png" alt="BiouBrain" />
+
   
   <h1>BiouBrain</h1>
   <p>A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. </p>
