--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@ body {
      width="100" 
      height="130" />
 
-  <img src="logoB.png" alt="BiouBrain" />
+  <img src="logoB.png" 
+    width="70"
+    height="40" />
 
   
   <h1>BiouBrain</h1>
