--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@ body {
      width="100" 
      height="130" />
 
-  <img src="logoB.png" />
+  <img src="logoB.png" 
+    width="140" 
+     height="80" />
 
   
   <p>A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. </p>
