--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@ body {
      width="100" 
      height="130" />
 
-  <img src="logoB.png" 
-    width="140" 
-     height="80" />
-
+<h1>BiouBrain</h1>
   
   <p>A student-led initiative looking to foster knowledge of neuroscience in youth and children. Active projects include Brain Bee study resources and the Journal Club. </p>
 
