--- a/booknook.html
+++ b/booknook.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="about.html">About Us</a>
+  <a href="getin.html">Get Involved</a>
+  <a href="content1.html">BB Notes</a>
+</div>
+
+<div style="padding-left:16px">
+
+<h2>Neuronicbooknook Journal Club</h2>
+
+  <p>The Journal Club is a space to discuss recent advancements in neuroscience. Documents for the Journal Club are listed here.</p>
+
+  <h3>January 3, 2025</h3>
+  <p>Journal Club first meeting - discussing: In vivo hyperphosphorylation of tau is associated with synaptic loss and behavioural abnormalities in the absence of tau seeds. </p>
+
+  ---
+  
+</div>
+</body>
+</html>
 
