--- a/about.html
+++ b/about.html
@@ -40,6 +40,8 @@ body {
   <a href="about.html">About Us</a>
   <a href="getin.html">Get Involved</a>
   <a href="content1.html">BB Notes</a>
+  <a href="booknook.html>Booknook</a>
+
 </div>
 
 <div style="padding-left:16px">
