--- a/getin.html
+++ b/getin.html
@@ -53,7 +53,7 @@ body {
 <h2>Get Involved! 
 </h2>
 
-<p><a href="https://forms.gle/5z4V2hfoBEffj3vS9">Journal Club Presenter Application</a></p>
+<p>The Journal Club Page can be found <a href="booknook.html">here</a>.</p>
 <p>The General Member Application can be found below. </p>
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdU3gKGovoG2YEqcXvPubSGaxsCS0llDuBy-YX6oi3gz0Bpuw/viewform?embedded=true" width="640" height="2255" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
