--- a/booknook.html
+++ b/booknook.html
@@ -53,6 +53,8 @@ body {
   <p>Journal Club first meeting - discussing: In vivo hyperphosphorylation of tau is associated with synaptic loss and behavioural abnormalities in the absence of tau seeds. </p>
 
   ---
+
+<p>The application form for Journal Presenters can be found below. We look forward to hearing about what you find exciting in neuroscience! <3 </p>
   
 </div>
 </body>
