--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@ body {
 <h2>Links
 </h2>
 
-<p><a href="https://discord.gg/Uh8xzRGPBE">Discord Invite</a></p>
-<p><a href="https://www.youtube.com/@bioubrain">Youtube</a></p>
+<p><a href="https://discord.gg/Uh8xzRGPBE"><img src="dlogo.png" alt="Discord" width="100" height="132"></a></p>
+<p><a href="https://www.youtube.com/@bioubrain"><img src="ylogo.png" alt="Youtube" width="100" height="132"></a></p>
 
 <h2>Socials
 </h2>
 
-<p><a href="https://x.com/bioubrain">X/Twitter</a></p>
-<p><a href="https://www.instagram.com/bioubrain/">Instagram</a></p>
-<p><a href="https://www.tiktok.com/@bioubrain">Tiktok</a></p>
+<p><a href="https://x.com/bioubrain"><img src="tlogo.png" alt="Twitter/X" width="100" height="132"></a></p>
+<p><a href="https://www.instagram.com/bioubrain/"><img src="ilogo.png" alt="Instagram" width="100" height="132"></a></p>
+<p><a href="https://www.tiktok.com/@bioubrain"><img src="tilogo.png" alt="Tiktok" width="100" height="132"></a></p>
 
 </div>
 
