--- a/index.html
+++ b/index.html
@@ -66,16 +66,17 @@ body {
 <h2>Links
 </h2>
 
-<p><a href="https://discord.gg/Uh8xzRGPBE"><img src="dlogo.png" alt="Discord" width="100" height="132"></a></p>
-<p><a href="https://www.youtube.com/@bioubrain"><img src="ylogo.png" alt="Youtube" width="100" height="132"></a></p>
+<a href="https://discord.gg/Uh8xzRGPBE"><img src="dlogo2.png" alt="Discord" width="50" height="50"></a>
+<a href="https://www.youtube.com/@bioubrain"><img src="ylogo.png" alt="Youtube" width="50" height="50"></a>
 
 <h2>Socials
 </h2>
 
-<p><a href="https://x.com/bioubrain"><img src="tlogo.png" alt="Twitter/X" width="100" height="132"></a></p>
-<p><a href="https://www.instagram.com/bioubrain/"><img src="ilogo.png" alt="Instagram" width="100" height="132"></a></p>
-<p><a href="https://www.tiktok.com/@bioubrain"><img src="tilogo.png" alt="Tiktok" width="100" height="132"></a></p>
-
+<a href="https://x.com/bioubrain"><img src="tlogo.png" alt="Twitter/X" width="50" height="50"></a>
+<a href="https://www.instagram.com/bioubrain/"><img src="ilogo2.png" alt="Instagram" width="50" height="50"></a>
+<a href="https://www.tiktok.com/@bioubrain"><img src="tilogo.png" alt="Tiktok" width="50" height="50"></a>
+---
+  
 </div>
 
 </body>
