--- a/index.html
+++ b/index.html
@@ -63,14 +63,12 @@ body {
 
 ---
 
-<h2>Links
+<h2>Links & Socials
 </h2>
 
 <a href="https://discord.gg/Uh8xzRGPBE"><img src="dlogo2.png" alt="Discord" width="60" height="60"></a>
 <a href="https://www.youtube.com/@bioubrain"><img src="ylogo.png" alt="Youtube" width="50" height="50"></a>
 
-<h2>Socials
-</h2>
 
 <a href="https://x.com/bioubrain"><img src="tlogo.png" alt="Twitter/X" width="50" height="50"></a>
 <a href="https://www.instagram.com/bioubrain/"><img src="ilogo2.png" alt="Instagram" width="50" height="50"></a>
