--- a/about.html
+++ b/about.html
@@ -58,7 +58,9 @@ body {
   <p>NeuronicBookNook Journal Club</p>
 <p>In Progress: Notes on the Current <a href="https://www.brainfacts.org/the-brain-facts-book">Brain Facts Book</a>. </p>
 
----
+</div>
+<div style="text-align:center">
+  ---
 
 <h2>About the Team Members
 </h2>
