--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@ body {
 <p>In Progress: Notes on the Current <a href="https://www.brainfacts.org/the-brain-facts-book">Brain Facts Book</a>. </p>
 
 </div>
-<div style="text-align:center">
+<div style="padding-left:16px">
   ---
 
 <h2>About the Team Members
