--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body {
   <a href="content1.html">BB Notes</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="text-align:center">
 
   <img src="logoA.png" 
      width="100" 
@@ -62,7 +62,8 @@ body {
 </p>
 
 ---
-
+</div>
+<div style = "padding-left:16px">
 <h2>Links & Socials
 </h2>
 
