--- a/getin.html
+++ b/getin.html
@@ -42,16 +42,21 @@ body {
   <a href="content1.html">BB Notes</a>
 </div>
 
-<div style="padding-left:16px">
-
-<h2>Current Projects
+<div style = "text-align:center">
+  <h2>Current Projects
 </h2>
+</div>
+<div style="padding-left:48px">
 
 <p>NeuronicBookNook Journal Club</p>
 <p>In Progress: Notes on the Current <a href="https://www.brainfacts.org/the-brain-facts-book">Brain Facts Book</a>. </p>
 
+</div>
+<div style = "text-align:center">
 <h2>Get Involved! 
 </h2>
+</div>
+<div style="padding-left:48px">
 
 <p>The Journal Club Page can be found <a href="booknook.html">here</a>.</p>
 <p>The General Member Application can be found below. </p>
