--- a/getin.html
+++ b/getin.html
@@ -61,6 +61,8 @@ body {
 <p>The Journal Club Page can be found <a href="booknook.html">here</a>.</p>
 <p>The General Member Application can be found below. </p>
 
+</div>
+  <div style = "text-align:center">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdU3gKGovoG2YEqcXvPubSGaxsCS0llDuBy-YX6oi3gz0Bpuw/viewform?embedded=true" width="640" height="2255" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 ---
