--- a/content1.html
+++ b/content1.html
@@ -42,7 +42,7 @@ body {
   <a href="content1.html">BB Notes</a>
 </div>
 
-<div style="padding-left:16px">
+<div style="text-align: center">
 
   <h2>Notes on the Brain Facts Book</h2>
   <p>This page is curently under construction! We hope to get back to you soon! <3 </p>
